--- a/TecBlog/css/styles.css
+++ b/TecBlog/css/styles.css
@@ -9,6 +9,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+h2 {
+  color: #f7b600 !important
+}
+
 body {
   background: #ecebeb !important;
 }
@@ -59,9 +63,23 @@ h1 {
   width: 660px;
 }
 
+.post-date{
+  font-size: 0.8em;
+  border-bottom: 1px solid #c5c4c4;
+  border-style: dotted;
+}
+
 .side-content {
   float: right;
   width: 240px;
+}
+.Post{
+    padding: 20px
+    border-bottom: 1px solid rgb(255, 255, 255);
+    margin-bottom: 20px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 5px;
+    margin: 20px;
 }
 
 .footnote {
