--- a/TecBlog/css/styles.css
+++ b/TecBlog/css/styles.css
@@ -67,6 +67,10 @@ h1 {
   font-size: 0.8em;
   border-bottom: 1px solid #c5c4c4;
   border-style: dotted;
+  border-color: #c5c4c4;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+  display: block;
 }
 
 .side-content {
