New Page - Notícias

--- a/TecBlog/css/styles.css
+++ b/TecBlog/css/styles.css
@@ -12,7 +12,9 @@
 h2 {
   color: #f7b600 !important
 }
-
+a{
+  text-decoration: none !important;
+}
 body {
   background: #ecebeb !important;
 }
@@ -53,7 +55,6 @@ h1 {
   margin: 0 auto;
 }
 
-.content,
 .side-content {
   background-color: white;
 }
@@ -78,12 +79,8 @@ h1 {
   width: 240px;
 }
 .Post{
-    padding: 20px
     border-bottom: 1px solid rgb(255, 255, 255);
-    margin-bottom: 20px;
     background-color: rgb(255, 255, 255);
-    border-radius: 5px;
-    margin: 20px;
 }
 
 .footnote {
