--- a/Museu/css/styles.css
+++ b/Museu/css/styles.css
@@ -64,3 +64,65 @@ nav ul li:hover {
   background: green;
 }
 
+aside {
+  width: 350px;
+  float: right;
+  background: #ebe7dd;
+  padding-bottom: 30px;
+}
+
+section#visita {
+  background: #cdc8b1;
+  padding: 10px 27px 27px 27px;
+  margin-top: 10px;
+}
+
+section#galeria {
+  padding: 10px 27px 0 27px;
+}
+
+section#galeria a {
+  display: block;
+  background: url("../img/fundo-foto.png") no-repeat;
+  float: left;
+  padding: 20px 15px 15px 15px;
+  margin: 10px 0 0 20px;
+}
+
+section#galeria img {
+  margin-left: 2px;
+  margin-top: 3px;
+}
+h4 {
+  color: #86521a;
+  text-transform: uppercase;
+  padding-bottom: 3px;
+  margin: 0;
+}
+
+input {
+  height: 20px;
+  background: white;
+  border: none;
+  font-size: 1em;
+  width: 80px;
+}
+
+input.campo {
+  border: 1px solid #ada484;
+}
+input.botao {
+  background: #9b9271;
+  color: white;
+  width: 100%;
+  height: 40px;
+  font-size: 1.2em;
+}
+
+fieldset {
+  border: none;
+}
+
+legend {
+  display: none;
+}
