--- a/Museu/css/styles.css
+++ b/Museu/css/styles.css
@@ -61,7 +61,7 @@ nav ul li:hover {
 #conteudo {
   width: 710px;
   float: left;
-  background: green;
+  margin-bottom: 20px;
 }
 
 aside {
@@ -69,6 +69,7 @@ aside {
   float: right;
   background: #ebe7dd;
   padding-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 section#visita {
@@ -125,4 +126,46 @@ fieldset {
 
 legend {
   display: none;
+}
+
+h3 {
+  color: #227115;
+  font-size: 1em;
+  margin-bottom: 15px;
+  text-transform: uppercase;
+}
+
+article#video {
+  float: left;
+  width: 310px;
+  margin-left: 25px;
+}
+article#mapa {
+  float: left;
+  width: 310px;
+  margin-left: 37px;
+}
+
+article#exposicoes {
+  float: left;
+  width: 310px;
+  margin: 15px 0 0 25px;
+}
+
+article#historia {
+  float: left;
+  width: 310px;
+  margin: 15px 0 0 37px;
+}
+
+footer {
+  clear: both;
+  padding: 20px 0 30px 0;
+  text-align: center;
+  background: url(../img/fundo-rodape.png) no-repeat center top;
+  margin-top: 20px;
+}
+
+footer > p a {
+  padding: 2px 10px;
 }
