--- a/finans/css/style.css
+++ b/finans/css/style.css
@@ -1,4 +1,14 @@
-#home{
-    background: #ffc107;
-    color: white;
+#home {
+  background: #ffc107;
+  color: white;
+}
+
+.caixa {
+  padding: 60px 0;
+  border-bottom: 1px solid #e5e5e5;
+}
+
+footer p a {
+  text-decoration: none;
+  margin: 5px 15px;
 }
