--- a/spotify/css/style.css
+++ b/spotify/css/style.css
@@ -1,5 +1,9 @@
 body {
   background: url(../imagens/capa.png), url(../imagens/ruido.png),
     linear-gradient(50deg, #ff4169, #7c26f8);
-    background-attachment: fixed;
+  background-attachment: fixed;
+}
+
+header a{
+    color: white !important;
 }
