--- a/spotify/css/style.css
+++ b/spotify/css/style.css
@@ -1,9 +1,68 @@
+body,
+html,
+#home {
+  height: 100%;
+}
+
 body {
   background: url(../imagens/capa.png), url(../imagens/ruido.png),
     linear-gradient(50deg, #ff4169, #7c26f8);
   background-attachment: fixed;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-header a{
-    color: white !important;
+nav.navbar-transparent {
+  padding: 15px 0;
+  background: rgba(0, 0, 0, 0.6);
+}
+.navbar-nav .nav-link {
+  color: white;
+}
+
+.navbar-nav .nav-link:hover {
+  color: #9bf0e1;
+}
+Extra .navbar-light .navbar-toggler {
+  border-color: rgba(255, 255, 255, 0.1);
+}
+.divisor {
+  width: 1px;
+  background: white;
+  margin: 8px 15px;
+}
+
+.capa {
+  text-align: center;
+}
+
+h1 {
+  font-weight: 900;
+  letter-spacing: -0.05em;
+  margin-bottom: 50px;
+  color: white;
+}
+
+/* Extra small devices (portrait phones, less than 576px)*/
+/* No media query since this is the default in Bootstrap*/
+
+/* Small devices (landscape phones, 576px and up)*/
+@media screen (max-width: 575.98px) {
+}
+
+/* Medium devices (tablets, 768px and up)*/
+@media screen (min-width: 576px) and (max-width: 767.98px) {
+  h1 {
+    font-size: 3em;
+  }
+}
+
+/* Large devices (desktops, 992px and up)*/
+@media screen (min-width: 768px) and (max-width: 991.98) {
+  h1 {
+    font-size: 5em;
+  }
+}
+
+@media screen {
+    
 }
